# neor_mini

./: Description.txt  README.md  ReadMe.md
Neor_min_ROS_Tutorials/: ReadMe.md
Neor_min_ROS_Tutorials/mini_motor_adaptor/: CMakeLists.txt  ReadMe.txt  mini上下位机通信协议.xlsx  package.xml
Neor_min_ROS_Tutorials/mini_motor_adaptor/launch/: mini_motor_adaptor.launch
Neor_min_ROS_Tutorials/mini_motor_adaptor/rviz/: mini_motor_adaptor.rviz
Neor_min_ROS_Tutorials/mini_motor_adaptor/src/: mini_motor_adaptor_node.cpp
Object_detection_&&_Distence/: ReadMe.md  ReadMe.txt
Object_detection_&&_Distence/TensorFlow_Lite_SSD_RPi_64-bits/: COCO_labels.txt  MobileNetV1.cpp  TestTensorFlow_Lite.cbp  TestTensorFlow_Lite.depend  TestTensorFlow_Lite.layout
calib_camera/: ReadMe.md  ReadMe.txt  calib_camera.py  摄像头标定的棋盘文件12*9.docx
mini_sim18_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
mini_sim18_ws/src/LeGO-LOAM/: Thinks.txt
mini_sim18_ws/src/mini_gmapping/: CMakeLists.txt  package.xml
mini_sim18_ws/src/mini_navigation/: CMakeLists.txt  package.xml
mini_sim18_ws/src/neor_mini/: CMakeLists.txt
mini_sim18_ws/src/neor_mini_linetrack/: CMakeLists.txt
mini_sim18_ws/src/send_goals/: CMakeLists.txt  package.xml  采集的目标点.docx
mini_sim18_ws/src/steer_drive_ros/: .travis.yml
mini_sim18_ws/src/steer_drive_ros/steer_bot_hardware_gazebo/: CMakeLists.txt  README.md  package.xml  path.bash  steer_bot_hardware_gazebo_plugins.xml
mini_sim18_ws/src/steer_drive_ros/steer_bot_hardware_gazebo/config/: pids.yaml  steer_bot_hardware_gazebo.yaml
mini_sim18_ws/src/steer_drive_ros/steer_bot_hardware_gazebo/include/steer_bot_hardware_gazebo/: steer_bot_hardware_gazebo.h
mini_sim18_ws/src/steer_drive_ros/steer_bot_hardware_gazebo/src/: steer_bot_hardware_gazebo.cpp
mini_sim18_ws/src/steer_drive_ros/steer_drive_ros/: CMakeLists.txt  package.xml
mini_sim18_ws/src/steer_mini_gazebo/: CMakeLists.txt
mini_sim18_ws/src/ultra_avoid_obstacle/: CMakeLists.txt  ReadMe.txt  package.xml
mini_sim18_ws/src/velodyne_simulator/: bitbucket-pipelines.yml
mini_sim20_ws/src/neor_mini_foxy/: CMakeLists.txt  package.xml
mini_sim20_ws/src/neor_mini_foxy/launch/: display.launch.py  neor_mini_gazebo.launch.py  spawn_car.launch.py
mini_sim20_ws/src/neor_mini_foxy/meshes/: base_link.stl  front_right_wheel_link.stl  left_rear_link.stl
mini_sim20_ws/src/neor_mini_foxy/rviz/: neor_mini_gazebo_sensors_rviz.rviz
mini_sim20_ws/src/neor_mini_foxy/scripts/: spawn_bot.py
mini_sim20_ws/src/neor_mini_foxy/src/: neor_mini_foxy_node.cpp
mini_sim20_ws/src/neor_mini_foxy/urdf/: neor_mini.urdf  neor_mini.xacro  neor_mini_gazebo.urdf
mini_sim20_ws/src/neor_mini_foxy/worlds/: simple.world
mini_sim20_ws/src/neor_mini_gazebo_plugin/: CMakeLists.txt  package.xml
mini_sim20_ws/src/neor_mini_gazebo_plugin/src/: neor_mini_gazebo_plugin.cpp  neor_mini_gazebo_plugin.hpp
mini_ws/src/cooneo_mini/: CMakeLists.txt  ReadMe.md  package.xml
mini_ws/src/cooneo_mini/launch/: display.launch  gazebo.launch
mini_ws/src/cooneo_mini/meshes/: front_steer_left_link.STL  front_steer_link.STL  kinect_Link.STL
mini_ws/src/cooneo_mini/rviz/: rviz.rviz  rviz_sensors.rviz
mini_ws/src/cooneo_mini/urdf/: cooneo_mini.csv  cooneo_mini.urdf  cooneo_mini_rviz.urdf  cooneo_mini_sensors_gazebo.urdf  cooneo_mini_with_sensors.urdf
mini_ws/src/cooneo_mini/worlds/: cafe.world  cooneo_office.world  sun.world  willow_Garage.world
mini_ws/src/cooneo_mini/worlds/Office_room/: model.config  model.sdf
mini_ws/src/cooneo_mini/worlds/Office_room_without_door/: model.config  model.sdf
mini_ws/src/robot_localization/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml  rosdoc.yaml
mini_ws/src/steer_drive_ros/: .travis.yml  LICENSE  README.md
mini_ws/src/steer_drive_ros/stepback_and_steerturn_recovery/: CMakeLists.txt  README.md  package.xml  path.bash  stepback_and_steerturn_recovery_plugin.xml
mini_ws/src/steer_drive_ros/stepback_and_steerturn_recovery/config/: backwards.yaml  planner_sample.yaml
mini_ws/src/steer_drive_ros/stepback_and_steerturn_recovery/include/stepback_and_steerturn_recovery/: stepback_and_steerturn_recovery.h
mini_ws/src/steer_drive_ros/stepback_and_steerturn_recovery/src/: stepback_and_steerturn_recovery.cpp
mini_ws/src/steer_mini_gazebo/: CMakeLists.txt  package.xml
mini_ws/src/steer_mini_gazebo/config/: ctrl_ackermann_steering_controller_mini.yaml  ctrl_gains_mini.yaml  ctrl_joint_state_publisher_mini.yaml  ctrl_steer_bot_hardware_gazebo_mini.yaml
mini_ws/src/steer_mini_gazebo/launch/: gmapping.launch  gmapping_steer_cooneo_mini_sensors_sim.launch  steer_cooneo_mini_sensors_sim.launch  steer_cooneo_mini_sim.launch  steer_cooneo_mini_ultrasonars_sim.launch
mini_ws/src/steer_mini_gazebo/map/: map.pgm  map.yaml  out_map2.pgm  out_map2.yaml
mini_ws/src/steer_mini_gazebo/nav_config/: costmap_common_params.yaml  diff_amcl.launch  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base.launch  move_base_params.yaml  teb_local_planner_params.yaml
mini_ws/src/steer_mini_gazebo/rviz/: gmapping_rviz.rviz  navigation_rviz.rviz
original_neor_mini/yourworkspace_ws/src/: ReadMe.txt
original_neor_mini/yourworkspace_ws/src/neor_mini/: ReadMe.md  package.xml
original_neor_mini/yourworkspace_ws/src/neor_mini/config/: joint_names_neor_mini.yaml
original_neor_mini/yourworkspace_ws/src/neor_mini/launch/: display.launch  gazebo.launch
original_neor_mini/yourworkspace_ws/src/neor_mini/meshes/: front_left_wheel_link.STL  front_steer_right_link.STL  rear_wheel_link.STL
original_neor_mini/yourworkspace_ws/src/neor_mini/rviz/: rviz.rviz
original_neor_mini/yourworkspace_ws/src/neor_mini/urdf/: neor_mini.csv  neor_mini.urdf
original_neor_mini/yourworkspace_ws/src/neor_mini/worlds/: cooneo_office.world
original_neor_mini/yourworkspace_ws/src/neor_mini/worlds/Office_room/: model.config
original_neor_mini/yourworkspace_ws/src/neor_mini/worlds/Office_room_without_door/: model.config  model.sdf
(+322 files in other folders)
