<package format="2">
  <name>neor_mini</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for neor_mini</p>
    <p>This package contains configuration data, 3D models and launch files
for neor_mini robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>joint_state_publisher_gui</buildtool_depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>